@@ -7,5 +7,20 @@
         {playerlist} <!--List of players. Need to be wrapped in <li> tags-->
     </ul>
 </div>
-<div>{playerdata}</div>
+<div><h3>Current Cash: {playercash}</h3></div>
+<br>
+<br>
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th class="span2">Holdings</th>
+            <th class="span2">Quantity</th>
+            <th class="span2">Value</th>
+            <th class="span2">Total</th>
+        </tr>
+    </thead>
+    <tbody>
+        {playerdata}
+    </tbody>
+</table>
         
