@@ -28,3 +28,4 @@ Cameron Stenmark                Acknowledged
 2/14/2016   Implemented player view - Austin
 2/14/2016   Added stock history for stock view - Cameron & John
 2/14/2016   Added navbar and updated styling - Cameron
+2/14/2015   Added Player holdings tables
